--- a/index.html
+++ b/index.html
@@ -507,6 +507,35 @@
     </div>
 
     <!-- FIM Daniel Costa -->
+	
+    <!-- INICIO Luiz Fernando -->
+
+	<div class="card">
+	  <img src="https://cdnb.artstation.com/p/assets/images/images/024/457/809/4k/lukas-walzer-hex.jpg?1582492237" alt="Person" class="card__image">
+	  <p class="card__name">Luiz Fernando</p>
+	  <div class="grid-container">
+
+	    <div class="grid-child-posts">
+	      Período: 6º
+	    </div>
+
+	    <div class="grid-child-followers">
+	      Aluno
+	    </div>
+
+	  </div>
+	  <ul class="social-icons">
+	    <li><a href="https://www.instagram.com/fernando_quinellato/"><i class="fa fa-instagram"></i></a></li>
+	    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+	    <li><a href="https://github.com/fernandoquinellato"><i class="fa fa-github"></i></a></li>
+	  </ul>
+
+          <button onclick="window.location.href='https://fernandoquinellato.github.io/startbootstrap-landing-page/dist/index.html';"class="btn draw-border">Follow</button>
+	  <button class="btn draw-border">Message</button>
+        </div>
+
+
+<!-- FIM Luiz Fernando -->
 
   </body>
 </div>
