--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
     </ul>
     <button onclick="window.location.href='https://bruno076.github.io/startbootstrap-landing-page/dist/index.html'" class="btn draw-border">Follow</button>
     <button class="btn draw-border">
-    ::before
-     "Message"
-    ::after	
+     Message	
   </div>
   
 </div>
