--- a/index.html
+++ b/index.html
@@ -508,7 +508,6 @@
 
     <!-- FIM Daniel Costa -->
 	
-<<<<<<< HEAD
 	<!-- Inicio Renan -->
 <div class="card">
   <img src="img/renan.png" alt="Person" class="card__image">
@@ -538,7 +537,6 @@
 </div>
 <!-- Fim Renan -->
 	
-=======
     <!-- INICIO Luiz Fernando -->
 
 	<div class="card">
@@ -567,7 +565,36 @@
 
 
 <!-- FIM Luiz Fernando -->
->>>>>>> 1847974a3f7144841795bcedbeb67b56be147548
+    <!-- INICIO Cedric Fagundes -->
+
+	<div class="container">
+  <div class="card">
+    <img src="https://avatars.githubusercontent.com/u/27564263?v=4" alt="Person" class="card__image">
+    <p class="card__name">Cedric Fagundes</p>
+    <div class="grid-container">
+
+      <div class="grid-child-posts">
+        10 Post
+      </div>
+
+      <div class="grid-child-followers">
+        380 Likes
+      </div>
+
+    </div>
+    <ul class="social-icons">
+      <li><a href="https://www.instagram.com/fagundescedric/"><i class="fa fa-instagram"> fagundescedric</i></a></li>
+      <li><a href="https://avatars.githubusercontent.com/u/27564263?v=4"><i class="fa fa-twitter"></i></a></li>
+      <li><a href="https://www.linkedin.com/in/cedric-fagundes-2b607a149/"><i class="fa fa-linkedin"> Cedric Fagundes</i></a></li>
+      <li><a href="#"><i class="fa fa-codepen"></i></a></li>
+    </ul>
+    <button class="btn draw-border">Follow</button>
+    <button class="btn draw-border">Message</button>
+
+  </div>
+
+
+<!-- FIM Cedric Fagundes -->
 
   </body>
 </div>
