--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
       <li><a href="https://www.linkedin.com/in/cedric-fagundes-2b607a149/"><i class="fa fa-linkedin"> Cedric Fagundes</i></a></li>
       <li><a href="#"><i class="fa fa-codepen"></i></a></li>
     </ul>
-    <button class="btn draw-border">Follow</button>
+    <button onclick="https://github.com/fagundescedric"class="btn draw-border">Follow</button>
     <button class="btn draw-border">Message</button>
 
   </div>
