--- a/index.html
+++ b/index.html
@@ -15,21 +15,16 @@
     <div class="grid-container">
 
       <div class="grid-child-posts">
-        150 Commit
+        8º período - SI
             </div>
 
-      <div class="grid-child-followers">
-        1000 Seguidores
-      </div>
+      
 
     </div>
     <ul class="social-icons">
-      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-      <li><a href="#"><i class="fa fa-codepen"></i></a></li>
+      <li><a href="https://www.linkedin.com/in/lucas-jos%C3%A9-93a2b6153/"><i class="fa fa-linkedin"></i></a></li>
     </ul>
-    <a href="https://github.com/LucasJose100"><button class="btn draw-border">Seguir</button></a>
+    <a href="https://lucasjose100.github.io/startbootstrap-landing-page/"><button class="btn draw-border">Seguir</button></a>
     
 
   </div>
