--- a/index.html
+++ b/index.html
@@ -358,29 +358,29 @@
 
     
 <!-- inicio joao gabriel alegria-->
-  <div class="card">
-    <img src="img/cara_do_joao.jpg" alt="Person" class="card__image">
-    <p class="card__name">João Gabriel A Napoleão</p>
-    <div class="grid-container">
+		
+		<div class="card">
+		<img src="img/cara_do_joao.jpg" alt="Person" class="card__image">
+		<p class="card__name">João Gabriel A Napoleão</p>
+		<div class="grid-container">
 
-      <div class="grid-child-posts">
-        8º período
-      </div>
+			<div class="grid-child-posts">
+			Período 8.
+			</div>
 
-      <div class="grid-child-followers">
-        1138 Curtidas
-      </div>
+			<div class="grid-child-followers">
+			Unilasalle RJ
+			</div>
 
+		</div>
+		<ul class="social-icons">
+			<li><a href="https://github.com/Voidgodhand"><i class="fa fa-github"></i></a></li>
+		</ul>
+		<a href="https://voidgodhand.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Minha Página</button></a>
+		<a href="https://salgado.github.io/lasalle.cscw.2021.1.pub/"><button class="btn draw-border">Página da Turma</button></a>
 
-    </div>
-    <ul class="social-icons">
-      <li><a href="https://github.com/Voidgodhand"><i class="fa fa-github"></i></a></li>
-    </ul>
-    <a href="https://voidgodhand.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Seguir</button></a>
-
-  </div>
-
-<!-- fim joao gabriel alegria -->
+		</div>
+		<!-- fim joao gabriel alegria -->
   
 
 
