--- a/index.html
+++ b/index.html
@@ -53,14 +53,12 @@
   </div>
   <ul class="social-icons">
     <li><a href="https://www.instagram.com/fernando_quinellato/"><i class="fa fa-instagram"></i></a></li>
-    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-    <li><a href="#"><i class="fa fa-codepen"></i></a></li>
+    <li><a href="https://github.com/fernandoquinellato"><i class="fa fa-github"></i></a></li>
   </ul>
 
 
-  <a href="https://github.com/fernandoquinellato"><button class="btn draw-border">Página</button></a>
-  <button class="btn draw-border">Message</button>
+  <a href="https://fernandoquinellato.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border"> Minha Página</button></a>
+  <a href="#"><button class="btn draw-border">Meu Grupo</button>
 
 </div>
 
