--- a/index.html
+++ b/index.html
@@ -44,10 +44,13 @@
           <li><a href="https://www.linkedin.com/in/gustavo-duarte-61593990/"><i class="fa fa-linkedin"></i></a></li>
           <li><a href="https://github.com/GustavoDuarteM"><i class="fa fa-github"></i></a></li>
         </ul>
+
         <a href="https://gustavoduartem.github.io/startbootstrap-landing-page.io/">
-          <button class="btn draw-border">Follow</button>
+          <button class="btn draw-border">Minha Página</button>
         </a>
-        <button class="btn draw-border">Message</button>
+        <a href="https://gustavoduartem.github.io/lasalle.cscw.2021.1.grupo05/">
+          <button class="btn draw-border">Meu Grupo</button>
+        </a>
   
       </div>
       <div class="card">
