--- a/index.html
+++ b/index.html
@@ -92,6 +92,27 @@
 		<a href="https://leonardomartelotte.github.io/martelotte-com/contact.html"><button class="btn draw-border">Meu Grupo</button></a>
 		</div>
 		<!-- FIM LEONARDO MARTELOTTE -->
+	    	<!-- INÍCIO Adriano Fernandes -->
+		<div class="card">
+		<img src="https://avatars.githubusercontent.com/u/82421121?s=400&u=da588c1c9745346653fbceca2a6ab3949bfd113e&v=4" alt="Person" class="card__image">
+		<p class="card__name">Adriano Fernandes</p>
+		<div class="grid-container">
+		  <div class="grid-child-posts">
+			5º Periodo
+		  </div>
+		  <div class="grid-child-followers">
+			SI Lasalle-RJ
+		  </div>
+		</div>
+		<ul class="social-icons">
+		  <li><a href="https://www.instagram.com/drianoo/"><i class="fa fa-instagram"></i></a></li>
+		  <li><a href=""><i class="fa fa-linkedin"></i></a></li>
+		  <li><a href=""><i class="fa fa-github"></i></a></li>
+		</ul>
+		<a href="https://adrianofernandes10.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Minha Página</button></a>
+		<a href=""><button class="btn draw-border">Meu Grupo</button></a>
+		</div>
+		<!-- FIM Adriano Fernandes -->
 	</div>
 </body>
 </html>
