--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-	<div class="px-4 py-5 my-5 text-center">
-    <h1 class="display-5 fw-bold">Página da Turma</h1>
-	</div>
     <div class="container">
 		<!-- inicio joao gabriel alegria-->
 		<div class="card">
@@ -132,6 +129,28 @@
 		<a href="#"><button class="btn draw-border">Meu Grupo</button></a>
 		</div>
 		<!-- FIM Guilherme Mendes -->
+	    			<!-- INÍCIO Endrigo Valente -->
+		<div class="card">
+		<img src="https://avatars.githubusercontent.com/u/54483167?" alt="Person" class="card__image">
+		<p class="card__name">Endrigo Valente</p>
+		<div class="grid-container">
+		  <div class="grid-child-posts">
+			4º Periodo
+		  </div>
+		  <div class="grid-child-followers">
+			SI Lasalle-RJ
+		  </div>
+		</div>
+		<ul class="social-icons">
+		  <li><a href="https://www.instagram.com/endrigo.valente/"><i class="fa fa-instagram"></i></a></li>
+		  <li><a href="https://www.linkedin.com/in/endrigo-valente-3357a635/"><i class="fa fa-linkedin"></i></a></li>
+		  <li><a href="https://github.com/evalente82"><i class="fa fa-github"></i></a></li>
+		</ul>
+		<a href="https://evalente82.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Minha Página</button></a>
+		<a href="#"><button class="btn draw-border">Meu Grupo</button></a>
+		</div>
+		<!-- FIM Endrigo Valente -->
+	    	
 	</div>
 </body>
 </html>
