--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 		<a href="#"><button class="btn draw-border">Meu Grupo</button></a>
 		</div>
 		<!-- FIM Guilherme Mendes -->
-	    			<!-- INÍCIO Endrigo Valente -->
+	    	<!-- INÍCIO Endrigo Valente -->
 		<div class="card">
 		<img src="https://avatars.githubusercontent.com/u/54483167?" alt="Person" class="card__image">
 		<p class="card__name">Endrigo Valente</p>
@@ -150,7 +150,7 @@
 		<a href="#"><button class="btn draw-border">Meu Grupo</button></a>
 		</div>
 		<!-- FIM Endrigo Valente -->
-	    			<!-- INÍCIO Gabriel Carvalho -->
+		<!-- INÍCIO Gabriel Carvalho -->
 		<div class="card">
 		<img src="https://avatars.githubusercontent.com/u/63477900?v=4" alt="Person" class="card__image">
 		<p class="card__name">Gabriel Carvalho</p>
@@ -169,7 +169,27 @@
 		<a href="https://gabrielcarvalho06.github.io/CSCW/"><button class="btn draw-border">Minha Página</button></a>
 		<a href="#"><button class="btn draw-border">Meu Grupo</button></a>
 		</div>
-		<!-- FIM Gabriel Carvalho -->	    	
+		<!-- FIM Gabriel Carvalho -->	
+		<!-- INÍCIO Guilherme Alexandre -->
+			<div class="card">
+		    <img src="https://avatars.githubusercontent.com/u/32078978?v=4" alt="Person" class="card__image">
+		    <p class="card__name">Guilherme Alexandre</p>
+		    <div class="grid-container">
+		      <div class="grid-child-posts">
+			8º Periodo
+		      </div>
+		      <div class="grid-child-followers">
+			SI Lasalle-RJ
+		      </div>
+		    </div>
+		    <ul class="social-icons">
+		      <li><a href="https://www.linkedin.com/in/guilherme-alexandre-a66027161/"><i class="fa fa-linkedin"></i></a></li>
+		      <li><a href="https://github.com/GuilhermeAs7"><i class="fa fa-github"></i></a></li>
+		    </ul>
+		    <a href="#"><button class="btn draw-border">Minha Página</button></a>
+		    <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
+		</div>
+		<!-- FIM Guilherme Alexandre -->
 	</div>
 </body>
 </html>
