--- a/index.html
+++ b/index.html
@@ -190,6 +190,26 @@
 		    <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
 		</div>
 		<!-- FIM Guilherme Alexandre -->
+		<!-- INÍCIO Gabriel Fernandes -->
+			<div class="card">
+		    <img src="https://avatars.githubusercontent.com/u/32078927?v=4" alt="Person" class="card__image">
+		    <p class="card__name">Gabriel Fernandes</p>
+		    <div class="grid-container">
+		      <div class="grid-child-posts">
+			8º Periodo
+		      </div>
+		      <div class="grid-child-followers">
+			SI Lasalle-RJ
+		      </div>
+		    </div>
+		    <ul class="social-icons">
+		      <li><a href="https://www.linkedin.com/in/gabriel-roland-367200158/"><i class="fa fa-linkedin"></i></a></li>
+		      <li><a href="https://github.com/GABRIELROLAND"><i class="fa fa-github"></i></a></li>
+		    </ul>
+		    <a href="https://gabrielroland.github.io/startbootstrap-landing-page/"><button class="btn draw-border">Minha Página</button></a>
+		    <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
+		</div>
+		<!-- FIM Gabriel Fernandes -->
 	</div>
 </body>
 </html>
