--- a/index.html
+++ b/index.html
@@ -210,6 +210,26 @@
 		    <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
 		</div>
 		<!-- FIM Gabriel Fernandes -->
+		<!-- INÍCIO Bruno Legentil -->
+		<div class="card">
+		    <img src="https://avatars.githubusercontent.com/u/32078880?s=400&u=ff2dc420ce8d9660cb6d8c5d4a01471698dfd2c4&v=4" alt="Person" class="card__image">
+		    <p class="card__name">Bruno Legentil</p>
+		    <div class="grid-container">
+		      <div class="grid-child-posts">
+			8º Periodo
+		      </div>
+		      <div class="grid-child-followers">
+			SI Lasalle-RJ
+		      </div>
+		    </div>
+		    <ul class="social-icons">
+		      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+		      <li><a href="https://github.com/bruno076"><i class="fa fa-github"></i></a></li>
+		    </ul>
+		    <a href="https://bruno076.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Minha Página</button></a>
+		    <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
+		</div>
+		<!-- FIM Bruno Legentil -->
 	</div>
 </body>
 </html>
