--- a/index.html
+++ b/index.html
@@ -230,6 +230,26 @@
 		    <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
 		</div>
 		<!-- FIM Bruno Legentil -->
+		<!-- INÍCIO Yago Batista -->
+		<div class="card">
+		    <img src="https://avatars.githubusercontent.com/u/20402021?v=4" alt="Person" class="card__image">
+		    <p class="card__name">Yago Batista</p>
+		    <div class="grid-container">
+		      <div class="grid-child-posts">
+			?º Periodo
+		      </div>
+		      <div class="grid-child-followers">
+			SI Lasalle-RJ
+		      </div>
+		    </div>
+		    <ul class="social-icons">
+		      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+		      <li><a href="#"><i class="fa fa-github"></i></a></li>
+		    </ul>
+		    <a href="#"><button class="btn draw-border">Minha Página</button></a>
+		    <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
+		</div>
+		<!-- FIM Yago Batista -->
 	</div>
 </body>
 </html>
