--- a/index.html
+++ b/index.html
@@ -250,6 +250,48 @@
 		    <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
 		</div>
 		<!-- FIM Yago Batista -->
+		<!-- INÍCIO Yan Miura -->
+		<div class="card">
+		    <img src="https://avatars.githubusercontent.com/u/82350314?v=4" alt="Person" class="card__image">
+		    <p class="card__name">Yan Miura</p>
+		    <div class="grid-container">
+		      <div class="grid-child-posts">
+			4º Periodo
+		      </div>
+		      <div class="grid-child-followers">
+			SI Lasalle-RJ
+		      </div>
+		    </div>
+		    <ul class="social-icons">
+		      <li><a href="https://www.instagram.com/yanmiura/"><i class="fa fa-instagram"></i></a></li>
+		      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+		      <li><a href="https://github.com/ymiuraa"><i class="fa fa-github"></i></a></li>
+		    </ul>
+		    <a href="https://github.com/ymiuraa/lasalle.cscw.2021.1.pub.git"><button class="btn draw-border">Minha Página</button></a>
+		    <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
+		</div>
+		<!-- FIM Yan Miura -->
+	    	<!-- INÍCIO Paulo Sérgio -->
+		<div class="card">
+		    <img src="https://avatars.githubusercontent.com/u/54866573?s=400&u=f32aedf06f33cde42cf0299424706ea4ea65abea&v=4" alt="Person" class="card__image">
+		    <p class="card__name">Paulo Sérgio</p>
+		    <div class="grid-container">
+		      <div class="grid-child-posts">
+			5º Periodo
+		      </div>
+		      <div class="grid-child-followers">
+			SI Lasalle-RJ
+		      </div>
+		    </div>
+		    <ul class="social-icons">
+		      <li><a href="https://www.instagram.com/paulinho_01p/"><i class="fa fa-instagram"></i></a></li>
+		      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+		      <li><a href="#"><i class="fa fa-github"></i></a></li>
+		    </ul>
+		    <a href="https://paulinho010.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Minha Página</button></a>
+		    <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
+		</div>
+		<!-- FIM Paulo Sérgio -->
 	</div>
 </body>
 </html>
