--- a/index.html
+++ b/index.html
@@ -312,6 +312,28 @@
 		    <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
 		</div>
 		<!-- FIM Rafael Feres -->
+		<!-- INÍCIO Daniel Costa -->
+		<div class="card">
+		    <img src="https://avatars.githubusercontent.com/u/82982367?s=400&u=cedc7bae2eb3440328fd9ab67024a5cefa0ff287&v=4" alt="Person" class="card__image">
+		    <p class="card__name">Daniel Costa</p>
+		    <div class="grid-container">
+		      <div class="grid-child-posts">
+			?º Periodo
+		      </div>
+		      <div class="grid-child-followers">
+			SI Lasalle-RJ
+		      </div>
+		    </div>
+		    <ul class="social-icons">
+		      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+		      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+		      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+		      <li><a href="https://github.com/DanielCosta-ptbr"><i class="fa fa-github"></i></a></li>
+		    </ul>
+		    <a href="https://DanielCosta-ptbr.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Minha Página</button></a>
+		    <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
+		</div>
+		<!-- FIM Daniel Costa -->
 	</div>
 </body>
 </html>
