--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 		    <p class="card__name">Daniel Costa</p>
 		    <div class="grid-container">
 		      <div class="grid-child-posts">
-			?º Periodo
+			4º Periodo
 		      </div>
 		      <div class="grid-child-followers">
 			SI Lasalle-RJ
@@ -340,7 +340,7 @@
 		    <p class="card__name">Renan Tostes</p>
 		    <div class="grid-container">
 		      <div class="grid-child-posts">
-			?º Periodo
+			7º Periodo
 		      </div>
 		      <div class="grid-child-followers">
 			SI Lasalle-RJ
@@ -355,6 +355,27 @@
 		    <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
 		</div>
 		<!-- FIM Renan Tostes -->
+		<!-- INÍCIO Luiz Fernando -->
+		<div class="card">
+		    <img src="https://cdnb.artstation.com/p/assets/images/images/024/457/809/4k/lukas-walzer-hex.jpg?1582492237" alt="Person" class="card__image">
+		    <p class="card__name">Luiz Fernando</p>
+		    <div class="grid-container">
+		      <div class="grid-child-posts">
+			6º Periodo
+		      </div>
+		      <div class="grid-child-followers">
+			SI Lasalle-RJ
+		      </div>
+		    </div>
+		    <ul class="social-icons">
+		      <li><a href="https://www.instagram.com/fernando_quinellato/"><i class="fa fa-instagram"></i></a></li>
+		      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+		      <li><a href="https://github.com/fernandoquinellato"><i class="fa fa-github"></i></a></li>
+		    </ul>
+		    <a href="https://fernandoquinellato.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Minha Página</button></a>
+		    <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
+		</div>
+		<!-- FIM Luiz Fernando -->
 	</div>
 </body>
 </html>
