--- a/index.html
+++ b/index.html
@@ -376,6 +376,27 @@
 		    <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
 		</div>
 		<!-- FIM Luiz Fernando -->
+		<!-- INÍCIO Cedric Fagundes -->
+		<div class="card">
+		    <img src="https://avatars.githubusercontent.com/u/27564263?v=4" alt="Person" class="card__image">
+		    <p class="card__name">Cedric Fagundes</p>
+		    <div class="grid-container">
+		      <div class="grid-child-posts">
+			?º Periodo
+		      </div>
+		      <div class="grid-child-followers">
+			SI Lasalle-RJ
+		      </div>
+		    </div>
+		    <ul class="social-icons">
+		      <li><a href="https://www.instagram.com/fagundescedric/"><i class="fa fa-instagram"></i></a></li>
+		      <li><a href="https://www.linkedin.com/in/cedric-fagundes-2b607a149/"><i class="fa fa-linkedin"></i></a></li>
+		      <li><a href="#"><i class="fa fa-github"></i></a></li>
+		    </ul>
+		    <a href="#"><button class="btn draw-border">Minha Página</button></a>
+		    <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
+		</div>
+		<!-- FIM Cedric Fagundes -->
 	</div>
 </body>
 </html>
