--- a/index.html
+++ b/index.html
@@ -397,6 +397,26 @@
 		    <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
 		</div>
 		<!-- FIM Cedric Fagundes -->
+		<!-- INÍCIO Lucas José -->
+		<div class="card">
+		    <img src="https://scontent.fcfb2-1.fna.fbcdn.net/v/t1.6435-9/29695232_1681834091906425_8894001491824607232_n.jpg?_nc_cat=103&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=E9dugRBUv64AX9dr8NZ&_nc_ht=scontent.fcfb2-1.fna&oh=ac17c71e74ccb052e5977cd0a9464752&oe=60AE530F" alt="Person" class="card__image">
+		    <p class="card__name">Lucas José</p>
+		    <div class="grid-container">
+		      <div class="grid-child-posts">
+			8º Periodo
+		      </div>
+		      <div class="grid-child-followers">
+			SI Lasalle-RJ
+		      </div>
+		    </div>
+		    <ul class="social-icons">
+		      <li><a href="https://www.linkedin.com/in/lucas-jos%C3%A9-93a2b6153/"><i class="fa fa-linkedin"></i></a></li>
+		      <li><a href="#"><i class="fa fa-github"></i></a></li>
+		    </ul>
+		    <a href="https://lucasjose100.github.io/startbootstrap-landing-page/"><button class="btn draw-border">Minha Página</button></a>
+		    <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
+		</div>
+		<!-- FIM Lucas José -->
 	</div>
 </body>
 </html>
