--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
 		      <li><a href="#"><i class="fa fa-github"></i></a></li>
 		    </ul>
 		    <a href="#"><button class="btn draw-border">Minha Página</button></a>
-		    <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
+		    <a href="https://salgado.github.io/lasalle.cscw.2021.1.pub/#"><button class="btn draw-border">Meu Grupo</button></a>
 		</div>
 		<!-- FIM Cedric Fagundes -->
 		<!-- INÍCIO Lucas José -->
