--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <li><a href="https://github.com/evalente82"><i class="fa fa-github"></i></a></li>
             </ul>
             <a href="https://evalente82.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Minha Página</button></a>
-            <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
+            <a href="https://renanltostes.github.io/grupo04/index.html"><button class="btn draw-border">Meu Grupo</button></a>
         </div>
         <!-- FIM Endrigo Valente -->
         <!-- INÍCIO Gabriel Carvalho -->
@@ -270,7 +270,7 @@
                 <li><a href="https://github.com/ymiuraa"><i class="fa fa-github"></i></a></li>
             </ul>
             <a href="https://github.com/ymiuraa/lasalle.cscw.2021.1.pub.git"><button class="btn draw-border">Minha Página</button></a>
-            <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
+            <a href="https://renanltostes.github.io/grupo04/index.html"><button class="btn draw-border">Meu Grupo</button></a>
         </div>
         <!-- FIM Yan Miura -->
         <!-- INÍCIO Paulo Sérgio -->
@@ -333,7 +333,7 @@
                 <li><a href="https://github.com/DanielCosta-ptbr"><i class="fa fa-github"></i></a></li>
             </ul>
             <a href="https://DanielCosta-ptbr.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Minha Página</button></a>
-            <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
+            <a href="https://renanltostes.github.io/grupo04/index.html"><button class="btn draw-border">Meu Grupo</button></a>
         </div>
         <!-- FIM Daniel Costa -->
         <!-- INÍCIO Renan Tostes -->
