--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                 <li><a href="#"><i class="fa fa-github"></i></a></li>
             </ul>
-            <a href="#"><button class="btn draw-border">Minha Página</button></a>
+            <a href="https://yagobatista.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Minha Página</button></a>
             <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
         </div>
         <!-- FIM Yago Batista -->
