--- a/index.html
+++ b/index.html
@@ -464,6 +464,28 @@
             <a href="https://qpgabriel.github.io/lasalle.cscw.2021.1.grupo01/"><button class="btn draw-border">Meu Grupo</button></a>
         </div>
         <!-- FIM Pedro Henrique -->
+		<!-- INÍCIO João Gabriel Carvalho -->
+        <div class="card">
+            <img src="https://avatars.githubusercontent.com/u/43052068?s=400&u=ea1753b0d56d59b878a11e4431f0748e2c0321b1&v=4" alt="Person" class="card__image">
+            <p class="card__name">João Gabriel Carvalho</p>
+            <div class="grid-container">
+                <div class="grid-child-posts">
+                    5º Periodo
+                </div>
+                <div class="grid-child-followers">
+                    SI Lasalle-RJ
+                </div>
+            </div>
+            <ul class="social-icons">
+                <li><a href="https://www.instagram.com/joaocarvalho96/"><i class="fa fa-instagram"></i></a></li>
+                <li><a href=><i class="fa fa-linkedin"></i></a></li>
+                <li><a href="#"><i class="fa fa-github"></i></a></li>
+            </ul>
+            <a href="https://joaogmcarvalho.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Minha
+					Página</button></a>
+            <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
+        </div>
+        <!-- FIM João Gabriel Carvalho -->
     </div>
 </body>
 
