--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 <li><a href="https://github.com/bruno076"><i class="fa fa-github"></i></a></li>
             </ul>
             <a href="https://bruno076.github.io/startbootstrap-landing-page/dist/index.html"><button class="btn draw-border">Minha Página</button></a>
-            <a href="#"><button class="btn draw-border">Meu Grupo</button></a>
+            <a href="https://bruno076.github.io/lasalle.cscw.2021.1.grupo03/"><button class="btn draw-border">Meu Grupo</button></a>
         </div>
         <!-- FIM Bruno Legentil -->
         <!-- INÍCIO Yago Batista -->
